<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">60FC</string>
    <string name="hint_user">Username</string>
    <string name="hint_pass">Password</string>
    <string name="hint_des">Designation</string>
    <string name="hint_dept">Department/Ministry</string>
    <string name="hint_date">Date of Posting</string>
    <string name="hint_mbl">Mobile Number</string>
    <string name="hint_address">Office Address</string>
    <string name="hint_profile">Profile Picture</string>
    <string name="hint_family_pic">Family Picture</string>
    <string name="hint_profile_pic">Profile Picture</string>
    <string name="signup">Login</string>
    <string name="title_activity_dashboard">IAS Officer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hint_add_family_pic">Add Family Picture</string>
    <string name="search_hint">Search</string>
    <string-array name="query_suggestions">
        <item>IAS Officer</item>
        <item>IRS Officer</item>
        <item>IPS Officer</item>
    </string-array>
    <string name="title_activity_maps" tools:ignore="ExtraTranslation">Map</string>
        <string-array name="country_array">
            <item>IAS</item>
        </string-array>
        <string name="animal_prompt">Choose Service</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>


    </resources>
