<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:longClickable="false"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/profile_pic"
                                android:layout_width="@dimen/dp_60"
                                android:layout_height="@dimen/dp_60"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:src="@drawable/userneww" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dp"
                                android:text="@string/hint_profile_pic"
                                android:textColor="@color/white" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/family_pic"
                                android:layout_width="@dimen/dp_60"
                                android:layout_height="@dimen/dp_60"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:src="@drawable/familynewnew" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dp"
                                android:text="@string/hint_family_pic"
                                android:textColor="@color/white" />
                        </LinearLayout>

                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/dp_10"
                        app:cardBackgroundColor="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_10"
                            android:layout_marginBottom="@dimen/dp_10"
                            android:orientation="vertical"
                            android:padding="@dimen/dp_30">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/input_layout_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:theme="@style/TextLabel">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/input_username"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/hint_user"
                                    android:inputType="textPersonName"
                                    android:theme="@style/TextInputEditText" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/input_layout_des"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:theme="@style/TextLabel">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/input_designation"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/hint_des"
                                    android:inputType="text"
                                    android:theme="@style/TextInputEditText" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/dp_5"
                                    android:paddingLeft="10dp"
                                    android:text="Service"
                                    android:textSize="14sp" />

                                <Spinner
                                    android:id="@+id/spinner1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/dp_5"
                                    android:layout_marginBottom="@dimen/dp_5"
                                    android:prompt="@string/animal_prompt" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/dp_5"
                                    android:paddingLeft="10dp"
                                    android:text="Batch No"
                                    android:textSize="14sp" />

                                <Spinner
                                    android:id="@+id/spinner_batch"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/dp_5"
                                    android:layout_marginBottom="@dimen/dp_5"
                                    android:prompt="@string/animal_prompt" />

                            </LinearLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/input_layout_dept"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:theme="@style/TextLabel">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/input_dept"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/hint_dept"
                                    android:inputType="text"
                                    android:theme="@style/TextInputEditText" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/input_layout_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:theme="@style/TextLabel">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/input_date"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/hint_date"
                                    android:inputType="datetime|date"
                                    android:theme="@style/TextInputEditText" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/input_layout_mbl"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:theme="@style/TextLabel">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/input_mbl"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/hint_mbl"
                                    android:inputType="phone"
                                    android:maxLength="10"
                                    android:theme="@style/TextInputEditText" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/input_layout_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:theme="@style/TextLabel">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/input_address"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/hint_address"
                                    android:inputType="textMultiLine"
                                    android:theme="@style/TextInputEditText" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/input_layout_city"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:theme="@style/TextLabel">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/input_city"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="City"
                                    android:inputType="text"
                                    android:theme="@style/TextInputEditText" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/input_layout_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:theme="@style/TextLabel">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/input_email"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="Email Id"
                                    android:theme="@style/TextInputEditText" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <Button
                                android:id="@+id/btn_signup"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/button_shape_login"
                                android:padding="10dp"
                                android:text="SIGN UP"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</layout>


